--- a/config
+++ b/config
@@ -60,15 +60,16 @@ bindsym $mod+F1 exec palemoon
 bindsym $mod+Shift+F2 exec gksu pcmanfm
 bindsym $mod+F2 exec pcmanfm
 bindsym $mod+F3 exec zathura /home/pedja/Documents/beginningJavaScript.pdf
-bindsym $mod+F4 exec xfce4-terminal -e 'mocp'
+bindsym $mod+F4 exec xfce4-terminal --title=text -e 'mocp'
 bindsym $mod+F5 exec nitrogen
 bindsym $mod+F6 exec lxappearance
 bindsym $mod+F7 exec pamac-manager
 bindsym $mod+F8 exec xfce4-terminal -e 'ranger'
 bindsym $mod+F9 exec xfce4-terminal -e 'mutt'
+bindsym $mod+F10 exec hexchat
 bindsym $mod+Ctrl+b exec xfce4-terminal -e 'bmenu'
 bindsym $mod+t exec --no-startup-id pkill compton
-bindsym $mod+Ctrl+t exec --no-startup-id compton -b
+bindsym $mod+Ctrl+t exec --no-startup-id compton -f -b
 bindsym $mod+Shift+d --release exec "killall dunst; exec notify-send 'restart dunst'"
 bindsym Print exec "scrot -e 'mv $f ~/Screenshots'; sleep 1; exec notify-send 'screenshot has been saved to ~/Screenshots'"
 bindsym $mod+Print --release exec "scrot -ue 'mv $f ~/Screenshots'; sleep 1; exec notify-send 'screenshot has been saved to ~/Screenshots'"
@@ -181,6 +182,7 @@ bindsym $mod+Shift+8 move container to workspace number 8; workspace 8
 # assign [class="Skype"] 5
 
 # Open specific applications in floating mode
+for_window [title="text"] floating enable border pixel 2
 for_window [class="Transmission-gtk"] floating enable border normal
 for_window [title="alsamixer"] floating enable border pixel 2
 for_window [class="Calamares"] floating enable border normal
@@ -265,7 +267,7 @@ bindsym $mod+9 exec --no-startup-id blurlock
 
 # Start i3bar to display a workspace bar (plus the system information i3status if available)
 bar {
-	position top
+#	position top
 	status_command i3status
 #	wheel_up_cmd nop
 #	wheel_down_cmd nop
@@ -288,11 +290,11 @@ exec --no-startup-id nm-applet
 exec --no-startup-id xfce4-power-manager
 exec --no-startup-id pamac-tray
 exec --no-startup-id clipit
- exec --no-startup-id pulseaudio
+# exec --no-startup-id pulseaudio
  exec --no-startup-id pa-applet
 # exec --no-startup-id blueman
 # exec_always --no-startup-id sbxkb
-exec --no-startup-id compton -b
+exec --no-startup-id compton -f -b
 # exec --no-startup-id start_conky_grey
 # exec --no-startup-id start_conky_green
 # exec --no-startup-id xautolock -time 10 -locker blurlock
