--- a/.i3status.conf
+++ b/.i3status.conf
@@ -21,7 +21,7 @@ order += "cpu_usage"
 order += "disk /"
 # order += "disk /home"
 #order += "wireless _first_"
-order += "ethernet _first_"
+#order += "ethernet _first_"
 order += "battery 1"
 order += "tztime local"
 # order += "ipv6"
@@ -42,11 +42,11 @@ format = " ⛁ %avail "
 disk "/home" {
 format = " /home %avail "
 }
-#wireless _first_ {
+wireless _first_ {
 # format_up = "W: (%quality at %essid) %ip"
-#format_up = "  %essid %quality "
-#format_down = " no wlan "
-#}
+# format_up = "  %essid %quality "
+format_down = " no wlan "
+}
 ethernet _first_ {
 # if you use %speed, i3status requires root privileges
 format_up = " lan: %ip %speed "
