--- a/.i3/config
+++ b/.i3/config
@@ -4,16 +4,17 @@
 # Set mod key (Mod1=<Alt>, Mod4=<Super>)
 set $mod Mod4
 
+# Use Mouse+$mod to drag floating windows
+floating_modifier $mod
+
 # set default desktop layout (default is tiling)
 # workspace_layout tabbed <stacking|tabbed>
 
 # Configure border style <normal|1pixel|pixel xx|none|pixel>
 new_window pixel 2
 new_float normal
-
 # Hide borders
 hide_edge_borders none
-
 # change borders
 bindsym $mod+u border none
 bindsym $mod+y border pixel 2
@@ -21,47 +22,29 @@ bindsym $mod+n border normal
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-#font pango:Cantarell 9
 font pango:hermit 9
 
-# Use Mouse+$mod to drag floating windows
-floating_modifier $mod
 
+############################
+## START PROGRAM LAUNCHER ##
+############################
+# rofi using j4-dmenu
+bindsym $mod+d exec --no-startup-id j4-dmenu-desktop --dmenu="/usr/bin/rofi -i -dmenu -p '' -font 'hermit 14' -bg '#282828' -hlbg '#928374' -fg '#928374' -hlfg '#282828' -bc '#282828' -bw 2 -opacity 80"
+# dmenu
+#bindsym $mod+d exec --no-startup-id dmenu_recency
+# rofi using dmenu
+#bindsym $mod+d exec --no-startup-id i3-dmenu-desktop --dmenu='rofi -dmenu' 
+
+
+###########################
+## APPLICATION SHORTCUTS ##
+###########################
 # start a terminal
 # bindsym $mod+Return exec terminal
 bindsym $mod+Return exec xfce4-terminal
-
-# kill focused window
-# bindsym $mod+Shift+q kill
-bindsym $mod+q kill
-
-# start program launcher
-# dmenu
-#bindsym $mod+d exec --no-startup-id dmenu_recency
-# rofi using j4-dmenu
-bindsym $mod+d exec --no-startup-id j4-dmenu-desktop --dmenu="/usr/bin/rofi -i -dmenu -p '' -font 'hermit 14' -bg '#282828' -hlbg '#928374' -fg '#928374' -hlfg '#282828' -bc '#282828' -bw 2 -opacity 80"
-# rofi using dmenu
-#bindsym $mod+d exec --no-startup-id i3-dmenu-desktop --dmenu='rofi -dmenu' 
-################################################################################################
-## sound-section - DO NOT EDIT if you wish to automatically upgrade Alsa -> Pulseaudio later! ##
-################################################################################################
-
-exec --no-startup-id volumeicon
-bindsym $mod+Ctrl+m exec terminal -e 'alsamixer'
-#exec --no-startup-id pulseaudio
-#exec --no-startup-id pa-applet
-#bindsym $mod+Ctrl+m exec pavucontrol
-
-################################################################################################
-
-# Screen brightness controls
-# bindsym XF86MonBrightnessUp exec "xbacklight -inc 10; notify-send 'brightness up'"
-# bindsym XF86MonBrightnessDown exec "xbacklight -dec 10; notify-send 'brightness down'"
-
-# Start Applications
 bindsym $mod+Escape exec gvim
 bindsym $mod+Shift+F1 exec firefox
-bindsym $mod+F1 exec palemoon
+bindsym $mod+F1 exec google-chrome-stable
 bindsym $mod+Shift+F11 exec luakit
 bindsym $mod+F11 exec uzbl-browser
 bindsym $mod+Shift+F2 exec gksu pcmanfm
@@ -83,71 +66,74 @@ bindsym $mod+Print --release exec "scrot -ue 'mv $f ~/Screenshots'; sleep 1; exe
 bindsym $mod+Shift+Print --release exec "notify-send 'selection will be saved to ~/Screenshots'; scrot -se 'mv $f ~/Screenshots'"
 bindsym $mod+Shift+h exec zathura i3_help.pdf
 bindsym $mod+Ctrl+x exec xkill
+# reload the configuration file
+bindsym $mod+Shift+c reload
+# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
+bindsym $mod+Shift+r restart
+
+
+##########################
+##        WINDOWS       ##
+##########################
+# kill focused window
+bindsym $mod+q kill
 # focus_follows_mouse no
-
+# focus the parent container
+bindsym $mod+a focus parent
+# change focus between tiling / floating windows
+bindsym $mod+space focus mode_toggle
 # change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+odiaeresis focus right
-
-# alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
 bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
-
 # move focused window
-bindsym $mod+Shift+j move left
-bindsym $mod+Shift+k move down
-bindsym $mod+Shift+l move up
-bindsym $mod+Shift+odiaeresis move right
-
-# alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
-
-# workspace back and forth (with/without active container)
-workspace_auto_back_and_forth yes
-#bindsym $mod+b workspace back_and_forth
-#bindsym $mod+Shift+b move container to workspace back_and_forth; workspace back_and_forth
-bindsym $mod+Tab workspace back_and_forth
-bindsym $mod+Shift+Tab move container to workspace back_and_forth; workspace back_and_forth
-
 # split in horizontal orientation
 bindsym $mod+h split h;exec notify-send 'tile horizontally'
-
 # split in vertical orientation
 bindsym $mod+v split v;exec notify-send 'tile vertically'
-
 # toggle fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
-
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
-
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
-
-# change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
-
 # toggle sticky
 bindsym $mod+Shift+s sticky toggle
+# Resize window (you can also use the mouse for that)
+bindsym $mod+r mode "resize"
+mode "resize" {
+        # These bindings trigger as soon as you enter the resize mode
+        # Pressing left will shrink the window’s width.
+        # Pressing right will grow the window’s width.
+        # Pressing up will shrink the window’s height.
+        # Pressing down will grow the window’s height.
+        bindsym Left resize shrink width 5 px or 5 ppt
+        bindsym Down resize grow height 5 px or 5 ppt
+        bindsym Up resize shrink height 5 px or 5 ppt
+        bindsym Right resize grow width 5 px or 5 ppt
+        # exit resize mode: Enter or Escape
+        bindsym Return mode "default"
+        bindsym Escape mode "default"
+}
 
-# focus the parent container
-bindsym $mod+a focus parent
 
+#####################
+##    WORKSPACES   ##
+#####################
 # Workspace names
 # set $ws1 1:
 # set $ws2 2:
 # set $ws3 3:
 # set $ws3 4:
-
+# switch to workspace with urgent window automatically
+for_window [urgent=latest] focus
 # switch to workspace
 bindsym $mod+1 workspace 1
 bindsym $mod+2 workspace 2
@@ -157,11 +143,13 @@ bindsym $mod+5 workspace 5
 bindsym $mod+6 workspace 6
 bindsym $mod+7 workspace 7
 bindsym $mod+8 workspace 8
-
 #navigate workspaces next / previous
 bindsym $mod+Ctrl+Right workspace next
 bindsym $mod+Ctrl+Left workspace prev
-
+# workspace back and forth (with/without active container)
+workspace_auto_back_and_forth yes
+bindsym $mod+Tab workspace back_and_forth
+bindsym $mod+Shift+Tab move container to workspace back_and_forth; workspace back_and_forth
 # Move focused container to workspace
 bindsym $mod+Ctrl+1 move container to workspace number 1
 bindsym $mod+Ctrl+2 move container to workspace number 2
@@ -171,7 +159,6 @@ bindsym $mod+Ctrl+5 move container to workspace number 5
 bindsym $mod+Ctrl+6 move container to workspace number 6
 bindsym $mod+Ctrl+7 move container to workspace number 7
 bindsym $mod+Ctrl+8 move container to workspace number 8
-
 # Move to workspace with focused container
 bindsym $mod+Shift+1 move container to workspace number 1; workspace 1
 bindsym $mod+Shift+2 move container to workspace number 2; workspace 2
@@ -181,14 +168,67 @@ bindsym $mod+Shift+5 move container to workspace number 5; workspace 5
 bindsym $mod+Shift+6 move container to workspace number 6; workspace 6
 bindsym $mod+Shift+7 move container to workspace number 7; workspace 7
 bindsym $mod+Shift+8 move container to workspace number 8; workspace 8
-
 # Open applications on specific workspaces
 # assign [class="Thunderbird"] 1
 # assign [class="Pale moon"] 2
 # assign [class="Pcmanfm"] 3
 # assign [class="Skype"] 5
 
-# Open specific applications in floating mode
+
+#################################################
+##          EXIT, RESTART AND LOCK        ##
+#################################################
+bindsym $mod+0 mode "$mode_system"
+set $mode_system (l)ock, (e)xit, switch_(u)ser, (s)uspend, (h)ibernate, (r)eboot, (Shift+s)hutdown
+mode "$mode_system" {
+    bindsym l exec --no-startup-id i3exit lock, mode "default"
+    bindsym s exec --no-startup-id i3exit suspend, mode "default"
+    bindsym u exec --no-startup-id i3exit switch_user, mode "default"
+    bindsym e exec --no-startup-id i3exit logout, mode "default"
+    bindsym h exec --no-startup-id i3exit hibernate, mode "default"
+    bindsym r exec --no-startup-id i3exit reboot, mode "default"
+    bindsym Shift+s exec --no-startup-id i3exit shutdown, mode "default"
+
+    # exit system mode: "Enter" or "Escape"
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
+# Lock screen
+bindsym $mod+9 exec --no-startup-id blurlock
+# exit i3 (logs you out of your X session)
+bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+
+
+###################
+##     i3BAR     ##
+###################
+# Start i3bar to display a workspace bar (plus the system information i3status if available)
+bar {
+	position top
+	status_command i3status
+#	wheel_up_cmd nop
+#	wheel_down_cmd nop
+	font pango:hermit,Icons 10
+	colors {
+		# GRUVBOX
+		separator #928374
+		background #282828
+		statusline #928374
+		focused_workspace #928374 #928374 #282828
+		active_workspace #fabd2f #fabd2f #282828
+		inactive_workspace #928374 #282828 #928374
+		urgent_workspace #fb4934 #fb4934 #282828
+	}
+}
+# Theme colors
+client.focused #458588 #458588 #282828 #458588
+client.unfocused #282828 #282828 #928374 #282828
+client.urgent #fb4934 #fb4934 #928374 #fb4934
+
+
+#################################################
+##       OPEN APPLICATIONS IN FLOATING MODE    ##
+#################################################
 for_window [title="text"] floating enable border pixel 2
 for_window [class="Transmission-gtk"] floating enable border normal
 for_window [title="alsamixer"] floating enable border pixel 2
@@ -216,137 +256,61 @@ for_window [class="Thus"] floating enable border normal
 for_window [class="Timeset-gui"] floating enable border normal
 for_window [class="(?i)virtualbox"] floating enable border normal
 
-# switch to workspace with urgent window automatically
-for_window [urgent=latest] focus
 
-# reload the configuration file
-bindsym $mod+Shift+c reload
 
-# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+Shift+r restart
-
-# exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
-
-# Set shut down, restart and locking features
-bindsym $mod+0 mode "$mode_system"
-set $mode_system (l)ock, (e)xit, switch_(u)ser, (s)uspend, (h)ibernate, (r)eboot, (Shift+s)hutdown
-mode "$mode_system" {
-    bindsym l exec --no-startup-id i3exit lock, mode "default"
-    bindsym s exec --no-startup-id i3exit suspend, mode "default"
-    bindsym u exec --no-startup-id i3exit switch_user, mode "default"
-    bindsym e exec --no-startup-id i3exit logout, mode "default"
-    bindsym h exec --no-startup-id i3exit hibernate, mode "default"
-    bindsym r exec --no-startup-id i3exit reboot, mode "default"
-    bindsym Shift+s exec --no-startup-id i3exit shutdown, mode "default"
-
-    # exit system mode: "Enter" or "Escape"
-    bindsym Return mode "default"
-    bindsym Escape mode "default"
-}
-
-# Resize window (you can also use the mouse for that)
-bindsym $mod+r mode "resize"
-mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 5 px or 5 ppt
-        bindsym k resize grow height 5 px or 5 ppt
-        bindsym l resize shrink height 5 px or 5 ppt
-        bindsym odiaeresis resize grow width 5 px or 5 ppt
-
-        # same bindings, but for the arrow keys
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
-
-        # exit resize mode: Enter or Escape
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
-}
-
-# Lock screen
-bindsym $mod+9 exec --no-startup-id blurlock
-
-# Start i3bar to display a workspace bar (plus the system information i3status if available)
-bar {
-	position top
-	status_command i3status
-#	wheel_up_cmd nop
-#	wheel_down_cmd nop
-	#font pango:Cantarell,Icons 9
-	font pango:hermit,Icons 10
-	colors {
-		# MANJARO DEFAULT COLORS
-		#separator #2ECC71
-		#background #000000
-		#statusline #DDDDDD
-		#focused_workspace #FFFFFF #2ECC71 #000000
-		#active_workspace #000000 #A4A28D #FFFFFF
-		#inactive_workspace #A4A28D #000000 #DDDDDD
-		#urgent_workspace #2ECC71 #900000 #FFFFFF
-		# GRUVBOX
-		separator #928374
-		background #282828
-		statusline #928374
-		focused_workspace #928374 #928374 #282828
-		active_workspace #fabd2f #fabd2f #282828
-		inactive_workspace #928374 #282828 #928374
-		urgent_workspace #fb4934 #fb4934 #282828
-	}
-}
-
-# Autostart applications
+############################
+## AUTOSTART APPLICATIONS ##
+############################
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec --no-startup-id nitrogen --restore
 exec --no-startup-id nm-applet
 exec --no-startup-id xfce4-power-manager
 exec --no-startup-id pamac-tray
 exec --no-startup-id clipit
+exec --no-startup-id compton -f -b
+exec --no-startup-id pa-applet
 # exec --no-startup-id pulseaudio
- exec --no-startup-id pa-applet
 # exec --no-startup-id blueman
 # exec_always --no-startup-id sbxkb
-exec --no-startup-id compton -f -b
 # exec --no-startup-id start_conky_grey
 # exec --no-startup-id start_conky_green
 # exec --no-startup-id xautolock -time 10 -locker blurlock
 
-# Theme colors
-#client.focused #2ECC71 #2ECC71 #000000 #FFFFFF
-client.focused #458588 #458588 #282828 #458588
-#client.unfocused #222222 #222222 #2ECC71 #222222
-client.unfocused #282828 #282828 #928374 #282828
-#client.urgent #274D01 #900000 #FFFFFF #900000
-client.urgent #fb4934 #fb4934 #928374 #fb4934
+
+################################################################################################
+## SOUND-SECTION - DO NOT EDIT if you wish to automatically upgrade Alsa -> Pulseaudio later! ##
+################################################################################################
+exec --no-startup-id volumeicon
+bindsym $mod+Ctrl+m exec terminal -e 'alsamixer'
+#exec --no-startup-id pulseaudio
+#exec --no-startup-id pa-applet
+#bindsym $mod+Ctrl+m exec pavucontrol
+
+
+################################
+## SCREEN BRIGHTNESS CONTROLS ##
+################################
+# bindsym XF86MonBrightnessUp exec "xbacklight -inc 10; notify-send 'brightness up'"
+# bindsym XF86MonBrightnessDown exec "xbacklight -dec 10; notify-send 'brightness down'"
+
 
 #############################
-### settings for i3-gaps: ###
+###         GAPS          ###
 #############################
-
 # Disable window titlebars entirely
 for_window [class="^.*"] border pixel 2
-
 # Set inner/outer gaps
 gaps inner 0
 gaps outer 0
-
 # Additionally, you can issue commands with the following syntax. This is useful to bind keys to changing the gap size.
 # gaps inner|outer current|all set|plus|minus <px>
 # gaps inner all set 10
 # gaps outer all plus 5
-
 # Smart gaps (gaps used if only more than one container on the workspace)
 smart_gaps on
-
 # Smart borders (draw borders around container only if it is not the only container on this workspace) 
 # on|no_gaps (on=always activate and no_gaps=only activate if the gap size to the edge of the screen is 0)
 smart_borders on
-
 # Press $mod+Shift+g to enter the gap mode. Choose o or i for modifying outer/inner gaps. Press one of + / - (in-/decrement for current workspace) or 0 (remove gaps for current workspace). If you also press Shift with these keys, the change will be global for all workspaces.
 set $mode_gaps Gaps: (o) outer, (i) inner
 set $mode_gaps_outer Outer Gaps: +|-|0 (local), Shift + +|-|0 (global)
